# SP-286

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: CD.yml  CI.yml  build_pipeline.yml  dependabot-auto-merge.yml  docs.yml  tag-check.yml  tests.yml  unittest.yml
APOLLO_LIBRARY/: __init__.py
APOLLO_LIBRARY/time/: __init__.py  calculator.py  converter.py  formatter.py
MY_LIBRARY/: __init__.py
MY_LIBRARY/time/: __init__.py  operations.py  transformer.py  utils.py
docs/api-docs/: README.md  time.calculator.md  time.converter.md  time.formatter.md  time.md
scripts/: package_generate_doc.sh  package_rename.py  precommit_install.sh  precommit_run.sh  virtualenv_create.sh
tests/: test_time_calculator.py  test_time_converter.py  test_time_formatter.py
