[project]
name = "APOLLO_LIBRARY"
version = "1.0.0"
description = "**APOLLO_LIBRARY** is a Python template package with CI and pre-commit."
authors = [
    {name = "FirstName LastName", email = "FirstName.LastName@gmail.com"}
]
requires-python = ">=3.8,<3.13"
readme = "README.md"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=6.2",
    "pydocstyle>=6.3.0",
    "lazydocs>=0.4.8",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"